--- a/widget.html
+++ b/widget.html
@@ -14,6 +14,21 @@
     border:1px solid grey;
     color: #999;
   }
+
+.equal {
+  display: flex;
+  display: -webkit-flex;
+  flex-wrap: wrap;
+}
+
+@media (min-width: 768px) {
+  .row.equal {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+
   .btn-calculate{
     width: inherit;
     height: 60px;
@@ -86,21 +101,21 @@
 <div class="container  widget-container">
   <div class="row">
     <div class="col-12 col-sm-6 ">
-      <div class="font1 text-center text-uppercase">Input Your Numbers</div>
+      <div class="font1 text-center text-uppercase">Wind Farm Inputs</div>
       <div class="card shadow-lg p-2" id="form-card" >
         <form id="widget-form" class>
           <div class="form-inline mt-1"> 
             <input id="i_1" type="number" min="0" max="1000" class="text-right" name="f1" req="true" value=100
              />
-             <label class="ml-2" for="f1">MW, Size of Windfarm</label>
+             <label class="ml-2" for="f1">mw, Size of Windfarm</label>
           </div>
           <div class="form-inline mt-1"> 
             <input id="i_2" min="0" max="1000" class="text-right" type="number" name="f2" value=2.8 />
-            <label class="ml-2" for="f2">MW Size of the generator </label>
+            <label class="ml-2" for="f2">mw Size of the generator </label>
           </div>
           <div class="form-inline mt-1">
             <input  id="i_3" min="0" max="1000" class="text-right" type="number" name="f3" value=160 />
-            <label class="ml-2" for="f3">cy Concrete per MW</label>
+            <label class="ml-2" for="f3">cy Concrete per mw</label>
           </div>
           <div class="form-inline mt-1">
             <input  id="i_4" min="0" max="1000" class="text-right" type="number" name="f4" value=6 />
@@ -108,15 +123,15 @@
           </div>
           <div class="form-inline mt-1">
             <input  id="i_5" min="0" max="1000" class="text-right" type="number" name="f5" value=8 />
-            <label class="ml-2" for="f5">Months, Construction period, conventional</label>
+            <label class="ml-2" for="f5">mo, Construction period, conventional</label>
           </div>
           <div class="form-inline mt-1">
             <input  id="i_6" min="0" max="1000" class="text-right" type="number" name="f6" value=6 />
-            <label class="ml-2" for="f6">Months, Construction period w/RUTE</label>
+            <label class="ml-2" for="f6">mo, Construction period w/RUTE</label>
           </div>
           <div class="form-inline mt-1">
             <input  id="i_7" min="0" max="1000" class="text-right" type="number" name="f7" value=80 />
-            <label class="ml-2" for="f7">k Cost to remove conventional foundation</label>
+            <label class="ml-2" for="f7">$k Cost to remove conventional foundation</label>
           </div>
         </form>
       </div>
@@ -150,14 +165,14 @@
     </div>
   </div>
   <br>
-  <div class="row" style="">
+  <div class="row row-equal-height" style="">
     <div class="col-12 col-sm-5 ">
-      <div style="max-width:350px">
+      <div style="">
         <div class="text-center text-bold">
           <div class="font4 text-uppercase">Environmental Benefits</div>
         </div>
-        <div class="card shadow-lg font6 p-2" id="bio_results">
-          <div class="row">
+        <div class="card shadow-lg font6 p-2 " id="bio_results" style="height:310px">
+          <div class="row mt-4">
             <div class="col-3 d-flex flex-nowrap"><span id="a_2"></span>&nbsp;cy</div>
             <div class="col-9">Concrete in conventional foundations</div>
           </div>
@@ -171,14 +186,18 @@
             <div class="col-9">Cubic yards of concrete saved</div>
           </div>
           <br>
-          <div class="font3">
+          <br>
+          <br>
+          <div class="font1">
             <div class="row">
-              <div class="col-3 d-flex flex-nowrap"><span id="a_4"></span>&nbsp;lbs</div>
-              <div class="col-9">Concrete saved</div>
+              <div class="col-12">
+                <div class="text-center" ><span id="a_4"></span>&nbsp;lbs Concrete saved</div>
+              </div>
             </div>
             <div class="row">
-              <div class="col-3 d-flex flex-nowrap"><span id="a_5"></span>&nbsp;lbs</div>
-              <div class="col-9">CO2 saved</div>
+              <div class="col-12">
+                <div class="text-center" ><span id="a_5"></span>&nbsp;lbs CO2 saved</div>
+              </div>
             </div>
           </div>
         </div>
@@ -240,7 +259,7 @@
   var cubic_yards = 275;
   var lbs_concrete = 3900;
   var co2_yard = 400;
-  var per_mw = 1.4;
+  var per>mw = 1.4;
 
   function calculate(){
     var a1 = Math.ceil($('#i_1').val()/$('#i_2').val() * cubic_yards);
@@ -252,8 +271,8 @@
     $('#a_4').html( ((a2 - a1) * lbs_concrete/1000000).toFixed(2) );
     $('#a_5').html(((a2 - a1) * co2_yard/100000).toFixed(2));
 
-    var b1 = $('#i_1').val() * per_mw;
-    var b4 = ($('#i_1').val() * per_mw * $('#i_4').val()/100 * ($('#i_5').val()/12)).toFixed(2);
+    var b1 = $('#i_1').val() * per>mw;
+    var b4 = ($('#i_1').val() * per>mw * $('#i_4').val()/100 * ($('#i_5').val()/12)).toFixed(2);
     var b5 = ((b1 * 0.05) * 1000000/Math.pow((1 + $('#i_4').val() * 0.01),30)/1000000).toFixed(2);
     var b6 = (($('#i_7').val() * $('#i_1').val()/$('#i_2').val() * 1000)/Math.pow((1 + $('#i_4').val() * 0.01),30)/1000000).toFixed(2);
     var b7 = b4 * ($('#i_5').val() - $('#i_6').val())/$('#i_5').val(); 
